--- a/CadastroClientes/Views/CadastroClientes/Editar.cshtml
+++ b/CadastroClientes/Views/CadastroClientes/Editar.cshtml
@@ -9,8 +9,8 @@
 </div>
 
 
-<form asp-controller="CadastroClientes" asp-action="Editar" method="post">
-
+<form asp-controller="CadastroClientes" asp-action="Alterar" method="post">
+    <input type="hidden" asp-for="Id" />
     <div class="form-group">
         <label for="nome" class="nm">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o Nome">
@@ -20,6 +20,6 @@
         <input type="text" asp-for="Telefone" class="form-control" placeholder="Digite o E-mail do Contato">
     </div>
 
-    <button type="submit" class="btn btn-primary">Adicionar</button>
-    <a class="btn btn-secondary" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
+    <button type="submit" class="btn btn-primary">Editar</button>
+    <a class="btn btn-secondary" asp-controller="CadastroClientes" asp-action="Index" role="button">Voltar</a>
 </form>
